--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@
 
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
+
+helloworld/greeter_server/greeter_server
+hlloworld/greeter_client/greeter_client
