--- a/kubernetes/server-istio.yml
+++ b/kubernetes/server-istio.yml
@@ -12,7 +12,20 @@ spec:
       protocol: TCP
   selector:
     app: "greeter-server"
-
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: greeter-http-server
+  labels:
+    app: "greeter-server"
+spec:
+  ports:
+    - port: 7789
+      name: "http-greeter"
+      protocol: TCP
+  selector:
+    app: "greeter-server"
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
@@ -49,6 +62,8 @@ spec:
         ports:
         - containerPort: 7788
           name: grpc-greeter
+        - containerPort: 7789
+          name: http-greeter
         resources: {}
       - args:
         - proxy
