--- a/kubernetes/deployment-autoinject-istio.yml
+++ b/kubernetes/deployment-autoinject-istio.yml
@@ -91,7 +91,9 @@ spec:
         - containerPort: 7789
           name: loadtest-client
         command: 
-          - "/root/loadtest_client"
+          - "tail"
+          - "-f"
+          - "/dev/null"
         env:
           - name: "CLIENTS"
             value: "400"
