docs and istio 1.0 manifest

--- a/kubernetes/ingress.yml
+++ b/kubernetes/ingress.yml
@@ -7,7 +7,7 @@ metadata:
 spec:
   rules:
   # update the host field to reflect a public URL
-  - host: greet.dev
+  - host: greet.dev.mydomain.com
     http:
       paths:
       - backend:
