--- a/kubernetes/istio/gateway.yml
+++ b/kubernetes/istio/gateway.yml
@@ -1,7 +1,7 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
-  name: ingressgateway
+  name: gw-helloworld
 spec:
   selector:
     istio: ingressgateway
@@ -10,17 +10,17 @@ spec:
     - hello.test.domain.ca
     - hello.test.domain.ca:443
     port:
-      name: https-hello
+      name: https-helloworld
       number: 443
       protocol: HTTPS
     tls:
       mode: SIMPLE
-      privateKey: /etc/istio/ingressgateway-certs/tls.key
-      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
+      privateKey: sds
+      serverCertificate: sds
   - hosts:
     - hello.test.domain.ca
     - hello.test.domain.ca:80
     port:
-      name: http-hello
+      name: http-helloworld
       number: 80
       protocol: HTTP
