--- a/kubernetes/istio/virtualservice.yml
+++ b/kubernetes/istio/virtualservice.yml
@@ -1,10 +1,10 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: hello-vs-ingress
+  name: vs-helloworld
 spec:
   gateways:
-  - ingressgateway
+  - gw-helloworld
   hosts:
   - hello.test.domain.ca
   - hello.test.domain.ca:443
